<resources>
    <string name="app_name">Android Interview</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sq">Simple Questions</string>
    <string name="tq">Tough Questions</string>
    <string name="seeother">See our Other App</string>
    <string name="rateapp">Rate App</string>
    <string name="tv_xx">XX/</string>
    <string name="tv_yy">YY/</string>
    <string name="tv_question">Question</string>
    <string name="tv_answer">Press A Button for Answer</string>

</resources>
