<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:id="@+id/question_ll">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:background="@drawable/blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_xx"
            android:textColor="#000000"
            android:id="@+id/tvxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_yy"
            android:textColor="#000000"
            android:id="@+id/tvyy" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/ques">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_question"
            android:padding="15dp"
            android:textColor="#000000"
            android:id="@+id/tvquestion" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_answer"
                android:padding="15dp"
                android:textColor="@android:color/holo_green_dark"
                android:background="@drawable/apress"
                android:id="@+id/tvanswer" />



        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:gravity="center|center_horizontal"
        android:background="@drawable/bottom">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back"
            android:id="@+id/bleft" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/a_button"
            android:id="@+id/bshowanswer" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/next"
            android:id="@+id/bright" />

    </LinearLayout>

</LinearLayout>
